<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/resultadoIMCNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/textoSeuIMC"
        app:layout_constraintStart_toEndOf="@+id/textoSeuIMC"
        app:layout_constraintTop_toTopOf="@+id/textoSeuIMC"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textoSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/sexo"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/botaoMulher"
        app:layout_constraintEnd_toEndOf="@+id/botaoMulher"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="@+id/botaoMulher" />

    <EditText
        android:id="@+id/campoIdade"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/insira_sua_idade"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/botaoMulher"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/botaoMulher"
        app:layout_constraintTop_toBottomOf="@+id/botaoMulher" />

    <TextView
        android:id="@+id/textoIdade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/idade"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/campoIdade"
        app:layout_constraintEnd_toEndOf="@+id/campoIdade"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/campoIdade" />

    <TextView
        android:id="@+id/textoAltura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/altura"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/campoAltura"
        app:layout_constraintEnd_toEndOf="@+id/campoAltura"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/campoAltura" />

    <TextView
        android:id="@+id/resultadoIMC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="@+id/textoSeuIMC"
        app:layout_constraintStart_toStartOf="@+id/textoSeuIMC"
        app:layout_constraintTop_toBottomOf="@+id/textoSeuIMC" />

    <EditText
        android:id="@+id/campoPeso"
        android:layout_width="227dp"
        android:layout_height="48dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/insira_seu_peso"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/campoIdade"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/campoIdade"
        app:layout_constraintTop_toBottomOf="@+id/campoIdade" />

    <EditText
        android:id="@+id/campoAltura"
        android:layout_width="225dp"
        android:layout_height="53dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/insira_sua_altura"
        android:inputType="number"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/campoPeso"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/campoPeso"
        app:layout_constraintTop_toBottomOf="@+id/campoPeso"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/botaoCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="botaoCalcularIMC"
        android:text="@string/calcular"
        app:layout_constraintEnd_toEndOf="@+id/campoAltura"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="@+id/campoAltura"
        app:layout_constraintTop_toBottomOf="@+id/campoAltura" />

    <TextView
        android:id="@+id/textoSeuIMC"
        android:layout_width="112dp"
        android:layout_height="37dp"
        android:layout_marginTop="12dp"
        android:text="@string/seu_imc"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="@+id/botaoCalcular"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/botaoCalcular"
        app:layout_constraintTop_toBottomOf="@+id/botaoCalcular" />

    <TextView
        android:id="@+id/textoPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/peso"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/campoPeso"
        app:layout_constraintEnd_toEndOf="@+id/campoPeso"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/campoPeso" />

    <ToggleButton
        android:id="@+id/botaoMulher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/togglebutton"
        android:textOff="@string/mulher"
        android:textOn="@string/mulher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

    <ToggleButton
        android:id="@+id/botaoHomem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/togglebutton"
        android:textOff="@string/homem"
        android:textOn="@string/homem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/botaoMulher"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

    <TextView
        android:id="@+id/textoKG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/kg"
        app:layout_constraintBottom_toBottomOf="@+id/campoPeso"
        app:layout_constraintStart_toEndOf="@+id/campoPeso"
        app:layout_constraintTop_toTopOf="@+id/campoPeso" />

    <TextView
        android:id="@+id/textoCM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/cm"
        app:layout_constraintBottom_toBottomOf="@+id/campoAltura"
        app:layout_constraintStart_toEndOf="@+id/campoAltura"
        app:layout_constraintTop_toTopOf="@+id/campoAltura"
        app:layout_constraintVertical_bias="0.47" />

</androidx.constraintlayout.widget.ConstraintLayout>